# BIT-Compiler-lab

lab1/: compilerlab1.cpp
lab2/: CMakeLists.txt  compilerlab2.cpp
lab3/: CMakeLists.txt  compilerlab3.cpp
lab4/: CMakeLists.txt  compilerlab4.cpp
